@@ -22,12 +22,17 @@ import cTree.CElement;
 import cTree.CFences;
 import cTree.CPlusRow;
 import cTree.CTimesRow;
+import cTree.adapter.C_Event;
 
 public class CE_2StrichPunktVZ extends CE_1 {
 
     @Override
-    protected CElement createExtraction(final CElement parent,
-            final ArrayList<CElement> selection, final CElement defElement) {
+    protected CElement createExtraction() {
+        final ArrayList<CElement> selection = this.getEvent().getSelection();
+        for (final CElement cEl : selection) {
+            cEl.removeCLastProperty();
+        }
+        selection.get(0).removeCActiveProperty();
         for (final CElement cEl : selection) {
             cEl.removeCLastProperty();
         }
@@ -49,7 +54,8 @@ public class CE_2StrichPunktVZ extends CE_1 {
         final CPlusRow newP = CPlusRow.createRow(newM);
         newP.correctInternalPraefixesAndRolle();
         newChild = CFences.createFenced(newP);
-        final CElement min1 = CFences.createFencedMin1(parent);
+        final CElement min1 = CFences.createFencedMin1(this.getEvent()
+                .getParent());
         final CTimesRow newTR = CTimesRow.createRow(CTimesRow.createList(
                 min1, newChild));
         newTR.correctInternalPraefixesAndRolle();
@@ -59,10 +65,15 @@ public class CE_2StrichPunktVZ extends CE_1 {
         return newTR;
     }
 
+    //
     @Override
-    protected boolean canExtract(final CElement parent,
-            final ArrayList<CElement> selection) {
-        // Alle müssen TimesRow sein und der erste Operator ist nicht div
-        return selection.get(0).hasExtMinus();
+    public boolean canDo(final C_Event e) {
+        if (e == null) {
+            return false;
+        }
+        if (e instanceof C_Event && !e.equals(this.getEvent())) {
+            this.setEvent((CE_Event) e);
+        }
+        return this.getEvent().getFirst().hasExtMinus();
     }
 }
